--- a/www/templates/form-list.html
+++ b/www/templates/form-list.html
@@ -2,13 +2,19 @@
 .list .item {
     border: 1px solid #ccc;
 }
+.item-complex .item-content, .item-radio .item-content{
+	padding: 16px 49px 4px 69px;
+}
 </style>
 <ion-view title="Lista de Operaciones">
 	<ion-content>
 		<ion-list class="list">
       
-	   <ion-item class="item" ng-repeat="person in todos | orderBy:'name'" href="#/app/{{prefs+'_'+person.pref}}" style="font-size: 20px;">
-				{{person.name}}
+	   <ion-item class="item item-avatar" ng-repeat="person in todos | orderBy:'name'" href="#/app/{{prefs+'_'+person.pref}}" style="font-size: 20px;">
+	   <img src="http://ionicframework.com/img/docs/venkman.jpg">
+	   <h2>{{person.name}}</h2>
+      <p>{{person.description}}</p>
+
 				<span class="badge"><i class="icon ion-chevron-right muted"></i></span>
 			</ion-item>
 		  
