--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,3 +1,9 @@
+<style>
+
+.item-complex .item-content, .item-radio .item-content{
+  padding: 16px 49px 16px 16px;
+}
+</style>
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-positive">
