remove icon list category

--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -16,9 +16,9 @@
       <!-- The content of the page -->
       <ion-list class="list">
 
-			  <ion-item class="item item-avatar" ng-repeat="person in todos | orderBy:'name'" href="#/app/list/{{person.id-1}}">
-				 <img src="http://ionicframework.com/img/docs/venkman.jpg">
-				   <h3 style="font-size: 18px !important;" class="cata">{{person.name}}</h3>
+			  <ion-item class="item item-list" ng-repeat="person in todos | orderBy:'name'" href="#/app/list/{{person.id-1}}">
+				 
+				   <h3 style="font-size: 18px !important;" class="cataa">{{person.name}}</h3>
 			       
 
 					<span class="badge badge-positive">{{person.formulas.length}}</span>
