--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,17 +24,17 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
+      <!--  <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
           Search
+        </ion-item>-->
+        <ion-item menu-close href="#/app/about">
+          Informacion
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item menu-close href="#/app/categories">
+          Categorias
         </ion-item>
       </ion-list>
     </ion-content>
