add attrbute status for list json

--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -18,7 +18,7 @@
 
 			  <ion-item class="item item-list" ng-repeat="person in todos | orderBy:'name'" href="#/app/list/{{person.id-1}}">
 				 
-				   <h3 style="font-size: 18px !important;" class="cataa">{{person.name}}</h3>
+				   <h3 style="font-size: 17px !important;" class="cata_">{{person.name}}</h3>
 			       
 
 					<span class="badge badge-positive">{{person.formulas.length}}</span>
