--- a/www/templates/formulas/anestecia_2.html
+++ b/www/templates/formulas/anestecia_2.html
@@ -45,10 +45,11 @@ form input.ng-invalid:not(.ng-pristine) {
 		
 		
 		<div style="position: absolute; bottom: 0px; width: 100%">
-			<div style="border:1px solid #ccc; background-color:#fff; ">
+			<!--<div style="border:1px solid #ccc; background-color:#fff; ">
 				<div style="background-color:#F1F1F1; padding:5px; border-bottom:1px solid #ccc;">Resultados</div>
 				<div style="padding:5px;">{{resultado}}</div>
-			</div>
+			</div>-->
+            <resultsimple></resultsimple>
 			<div style="text-align: center">
 				<div class="row">
 				  <div class="col"><button type="button" class="button button-block button-assertive"  ng-click="reset()">CLEAR</button></div>
