add new directica for item status

--- a/www/templates/form-list.html
+++ b/www/templates/form-list.html
@@ -14,7 +14,12 @@
 		<ion-list class="list">
       
 	   <ion-item class="item item-avatar cat" ng-repeat="person in todos | orderBy:'name'" href="#/app/{{prefs+'_'+person.pref}}">
-			   <img src="http://ionicframework.com/img/docs/venkman.jpg">
+
+	  
+
+	   <item-status receiptids="{{person.status}}"></item-status>
+
+			   <!--<img src="http://ionicframework.com/img/docs/venkman.jpg">-->
 			   <h2 class="cata" style="font-size: 18px !important;" >{{person.name}}</h2>
 		       <p class="cata" style="font-size: 12px !important;" >{{person.description}}</p>
 
