refactor form list

--- a/www/templates/form-list.html
+++ b/www/templates/form-list.html
@@ -13,9 +13,7 @@
 	<ion-content>
 		<ion-list class="list">
       
-	   <ion-item ng-click="disabled()" class="item item-avatar cat" ng-repeat="person in todos | orderBy:'name'" href="#/app/{{prefs+'_'+person.pref}}">
-
-	  
+	   <ion-item class="item item-avatar cat" ng-repeat="person in todos | orderBy:'name'" href="#/app/{{prefs+'_'+person.pref}}">
 
 	   <item-status receiptids="{{person.status}}"></item-status>
 
