--- a/www/templates/form-list.html
+++ b/www/templates/form-list.html
@@ -13,9 +13,9 @@
 	<ion-content>
 		<ion-list class="list">
       
-	   <ion-item class="item item-avatar cat" ng-repeat="person in todos | orderBy:'name'" href="#/app/{{prefs+'_'+person.pref}}">
+	   <ion-item class="item item-avatar cat" ng-repeat="person in todos | orderBy:'name' | filter: {'status': true}: true" href="#/app/{{prefs+'_'+person.pref}}" ng-if="todos.length > 0">
 
-	   <item-status receiptids="{{person.status}}"></item-status>
+	   		<item-status receiptids="{{person.status}}"></item-status>
 
 			   <!--<img src="http://ionicframework.com/img/docs/venkman.jpg">-->
 			   <h2 class="cata" style="font-size: 18px !important;" >{{person.name}}</h2>
@@ -25,6 +25,10 @@
 			</ion-item>
 		  
       </ion-list>
+
+      <ion-item class="animate-if" ng-if="todos.length == 0">
+				  No se Encuentran Registros
+	  </ion-item>
 	  
 	</ion-content>
 </ion-view>
