--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,4 +2,7 @@
 .disabled {
   cursor: not-allowed;
 }
+.animate-if{
+	font-size:18px; background-color:#f8f8f8; text-align:center; top: 200px;
+}
 
