--- a/www/templates/form-list.html
+++ b/www/templates/form-list.html
@@ -13,7 +13,9 @@
 	<ion-content>
 		<ion-list class="list">
       
-	   <ion-item class="item item-avatar cat" ng-repeat="person in todos | orderBy:'name' " href="#/app/{{prefs+'_'+person.pref}}" ng-if="todos.length > 0">
+	   <!--<ion-item class="item item-avatar cat" ng-repeat="person in todos | orderBy:'name' | filter: {'status': true}: true" href="#/app/{{prefs+'_'+person.pref}}" ng-if="todos.length > 0">-->
+
+	    <ion-item class="item item-avatar cat" ng-repeat="person in todos | orderBy:'name'" ng-href="{{person.status ? '#/app/'+prefs+'_'+person.pref : '#'}}" ng-if="todos.length > 0">
 
 	   		<item-status receiptids="{{person.status}}"></item-status>
 
