--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,3 +6,23 @@
 	font-size:18px; background-color:#f8f8f8; text-align:center; top: 200px;
 }
 
+.scroll{height: 100%;}
+
+.form-validate.ng-invalid {
+    border: 3px solid #cc2511;
+}
+.form-validate.ng-valid {
+    border: none;
+}
+
+form input.ng-invalid:not(.ng-pristine) {
+    box-shadow: 0 0 3px red;
+}
+.error-message {
+    padding: 12px;
+    background-color: rgba(255, 133, 0, 0.1);
+    font-weight: bold;
+}
+.item-input input {
+    margin: 0 9px 0 0;
+}
