--- a/www/templates/formulas/anestecia_6.html
+++ b/www/templates/formulas/anestecia_6.html
@@ -45,8 +45,16 @@
             </div>   
 
 
+        <fancy-select
+                      header-text="Single"
+                      allow-empty='false'
+                      value="val.single"
+                      text="countries_text_single"
+                      items="genero">
+        </fancy-select>
 
-        <label class="item item-input item-select">   
+
+       <!-- <label class="item item-input item-select">   
             
                <select name="genero" id="genero" ng-model="info.genero">
                   <option value="1" selected>Masculino</option>
@@ -56,7 +64,7 @@
             </label>    
              <div class="error-container last-error-container" ng-show="infoForm.genero.$error && infoForm.$submitted" ng-messages="infoForm.genero.$error">
                 <div ng-messages-include="error-list.html"></div> 
-            </div>   
+            </div>  --> 
 
 
             
@@ -100,6 +108,77 @@
               Este campo debe ser un Numero!
             </div>
           </script>   
+
+
+
+
+
+    
+
+
+          <script id="fancy-select.html" type="text/ng-template">
+            <ion-list>
+              <ion-item class="item-text-wrap" ng-click="showItems($event)">
+                {{text}}
+                <span class="item-note">
+                  {{noteText}}
+                  <img class="{{noteImgClass}}" ng-if="noteImg != ''" src="{{noteImg}}" />
+                </span>
+              </ion-item>
+            </ion-list>
+          </script>
+
+
+            <!--<fancy-select
+                              header-text="Multiple"
+                              allow-empty='false'
+                              value="val.multiple"
+                              text="countries_text_multiple"
+                              items="countries"
+                              multi-select="true"            
+                              >
+                </fancy-select>-->
+          <script id="fancy-select-items.html" type="text/ng-template">
+            <ion-view class="fancy-select-items modal">
+              <ion-header-bar class="bar-positive">
+
+                <button ng-click="hideItems()" class="button button-positive button-icon ion-ios7-arrow-back"></button>
+
+                <h1 class="title">{{headerText}}</h1>
+
+                <button ng-click="validate()" class="button button-positive button-icon ion-checkmark"></button>
+
+              </ion-header-bar>
+              <ion-content>
+                <div class="list">
+                  <!-- Multi select -->
+                  <ion-toggle
+                              ng-repeat="item in items"
+                              ng-if="multiSelect"
+                              ng-checked="item.checked"
+                              ng-model="item.checked"
+                              class="item item-text-wrap">
+                    <div class="fancy-select-icon" ng-if="item.icon != null">
+                      <img src="{{item.icon}}" />
+                    </div>
+                    {{item.text}}
+                  </ion-toggle>
+
+                  <!-- Single select -->
+                  <label
+                         ng-repeat="item in items"
+                         ng-if="!multiSelect"
+                         class="item item-text-wrap"
+                         ng-click='validateSingle(item)'>
+                    <div class="fancy-select-icon" ng-if="item.icon != null">
+                      <i class="icon-{{item.text}}" style="background-image: url({{item.icon}})"></i>
+                    </div>
+                    {{item.text}}
+                  </label>
+                </div>
+              </ion-content>
+            </ion-view>
+          </script>
 
 	<!--<form name="myForm" novalidate>
         <div class="list___">
