--- a/www/css/style.css
+++ b/www/css/style.css
@@ -98,3 +98,8 @@ form input.ng-invalid:not(.ng-pristine) {
   margin-right: 10px;
   width: 30px;
   text-align: center; }
+
+
+.item-input input{
+   /*  text-align: right; */
+}
