--- a/www/templates/formulas/anestecia_6.html
+++ b/www/templates/formulas/anestecia_6.html
@@ -1,7 +1,7 @@
 
 <ion-view title="Calcular">
 	<ion-content class="has-header padding form-content">
-        <div id="info-form" style="top: 0px; width: 100%; margin-bottom: 10px;">
+        <div id="info-form" style="top: 0px; width: 100%; margin-bottom: 10px; min-height: 50px;">
             <div style="border:1px solid #ccc; background-color:#fff; ">
                 <div style="background-color:#F1F1F1; padding:5px; border-bottom:1px solid #ccc;">Informacion</div>
                 <div style="padding:5px; background-color:#f9f9f9;">asdasdas</div>
@@ -77,7 +77,7 @@
 
 
           <div style="position: absolute; bottom: 0px; width: 100%">
-            <div id="res-simple" style="border:1px solid #ccc; background-color:#fff; ">
+            <div id="res-simple" style="border:1px solid #ccc; background-color:#fff;">
                 <div style="background-color:#F1F1F1; padding:5px; border-bottom:1px solid #ccc;">Resultados</div>
                 <div style="padding:5px; background-color:#f9f9f9;">{{resultado}}</div>
             </div>
