new ngCordi]ova event

--- a/www/templates/formulas/anestecia_6.html
+++ b/www/templates/formulas/anestecia_6.html
@@ -76,7 +76,7 @@
           
 
 
-          <div style="position: absolute; bottom: 0px; width: 100%">
+          <div id="resBoton" style="position: absolute; bottom: 0px; width: 100%">
             <div id="res-simple" style="border:1px solid #ccc; background-color:#fff;">
                 <div style="background-color:#F1F1F1; padding:5px; border-bottom:1px solid #ccc;">Resultados</div>
                 <div style="padding:5px; background-color:#f9f9f9;">{{resultado}}</div>
