--- a/www/templates/formulas/anestecia_2.html
+++ b/www/templates/formulas/anestecia_2.html
@@ -55,20 +55,20 @@
         </div>-->
 		
 		
-		<div style="position: absolute; bottom: 0px; width: 100%">
-			<div style="border:1px solid #ccc; background-color:#fff; ">
-				<div style="background-color:#F1F1F1; padding:5px; border-bottom:1px solid #ccc;">Resultados</div>
-				<div style="padding:5px;">{{resultado}}</div>
-			</div>
-           <!-- <resultsimple></resultsimple>-->
-			<div style="text-align: center">
-				<div class="row">
-				  <div class="col"><button type="button" class="button button-block button-assertive"  ng-click="reset()">CLEAR</button></div>
-				  <div class="col"><button type="submit" class="button button-block button-positive">CALCULATE</button></div>
-				</div>
-			  
-			</div>
-		</div>
+
+          <div id="resBoton" style="position: absolute; bottom: 0px; width: 100%">
+            <div id="res-simple" style="border:1px solid #ccc; background-color:#fff;">
+                <div style="background-color:#F1F1F1; padding:5px; border-bottom:1px solid #ccc;">Resultados</div>
+                <div style="padding:5px; background-color:#f9f9f9;">{{resultado}}</div>
+            </div>
+            <div style="text-align: center">
+                <div class="row">
+                  <div class="col"><button type="button" class="button button-block button-assertive"  ng-click="reset()">CLEAR</button></div>
+                  <div class="col"><button type="submit" class="button button-block button-positive">CALCULATE</button></div>
+                </div>
+              
+            </div>
+        </div>
 
     </form>
       </ion-content>
