update content in menu

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -34,7 +34,7 @@
           Informacion
         </ion-item>
         <ion-item menu-close href="#/app/categories">
-          Categorias
+          Lista Categorias
         </ion-item>
       </ion-list>
     </ion-content>
