refactor form presion 2

--- a/www/templates/formulas/anestecia_2.html
+++ b/www/templates/formulas/anestecia_2.html
@@ -3,7 +3,7 @@
 	<ion-content class="has-header padding form-content">
 
 	     <div id="info-form" style="top: 0px; width: 100%; margin-bottom: 10px;">
-            <div style="border:1px solid #ccc; background-color:#fff; max-height: 50px;">
+            <div style="border:1px solid #ccc; background-color:#fff;">
                 <div style="background-color:#F1F1F1; padding:5px; border-bottom:1px solid #ccc;">Informacion</div>
                 <div style="padding:5px; background-color:#f9f9f9;">asdasdas</div>
                  <div style="padding:5px; background-color:#f9f9f9;">asdassssdas</div>
